--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>I am a 3rd Year college student.</p>
     </section>
 
     <section id="portfolio" class="portfolio">
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>Project Alfa</h3>
+            <p>First project</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>Project Beta</h3>
+            <p>Backup project</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
