modify project description

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="portfolio" class="portfolio">
         <h2>Portfolio</h2>
         <div class="portfolio-item">
-            <img src="img/img1.jpg" alt="Project 1">
+            <img src="https://images.search.yahoo.com/images/view;_ylt=AwrOqtEuZtRkofsQqdKJzbkF;_ylu=c2VjA3NyBHNsawNpbWcEb2lkAzIxZGVhY2MyNTY1OGE1YTM5ZmNhMTNkMzUwOTYwYzEwBGdwb3MDMjIEaXQDYmluZw--?back=https%3A%2F%2Fimages.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Djinx%2Bpic%26ei%3DUTF-8%26type%3DE210US91213G0%26fr%3Dmcafee%26fr2%3Dp%253As%252Cv%253Ai%252Cm%253Asb-top%26tab%3Dorganic%26ri%3D22&w=1920&h=1080&imgurl=images6.fanpop.com%2Fimage%2Fphotos%2F37400000%2FJinx-league-of-legends-37464251-1920-1080.jpg&rurl=http%3A%2F%2Fwww.fanpop.com%2Fclubs%2Fleague-of-legends%2Fimages%2F37464251%2Ftitle%2Fjinx-photo&size=520.9KB&p=jinx+pic&oid=21deacc25658a5a39fca13d350960c10&fr2=p%3As%2Cv%3Ai%2Cm%3Asb-top&fr=mcafee&tt=Jinx+-+League+of+Legends+Photo+%2837464251%29+-+Fanpop&b=0&ni=140&no=22&ts=&tab=organic&sigr=htRTWZ2Ag4Q9&sigb=ZA3OmkgxUvsv&sigi=6OEP5_q_YwtR&sigt=V2NL3tfWtyLu&.crumb=Rvrvr.vEwRr&fr=mcafee&fr2=p%3As%2Cv%3Ai%2Cm%3Asb-top&type=E210US91213G0" alt="Project 1">
             <h3>Project Alfa</h3>
             <p>First project</p>
         </div>
