modify project description

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <section id="portfolio" class="portfolio">
         <h2>Portfolio</h2>
         <div class="portfolio-item">
-            <img src="img/img1.jpg" alt="Project 1">
+            <img src="img/th.jfif" alt="Project 1">
             <h3>Project Alfa</h3>
             <p>First project</p>
         </div>
         <div class="portfolio-item">
-            <img src="img/img1.jpg" alt="Project 2">
+            <img src="img/th (1).jfif" alt="Project 2">
             <h3>Project Beta</h3>
             <p>Backup project</p>
         </div>
