--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/th.jfif" alt="Project 1">
-            <h3>Project Alfa</h3>
-            <p>First project</p>
+            <h3>Jinx</h3>
+            <p>Jinx is a character in Riot Games' League of Legends media franchise. She was introduced as a playable champion in the October 2013 update for the 2009 video game of the same name, which was complemented by the animated music video "Get Jinxed" to commemorate her official debut. </p>
         </div>
         <div class="portfolio-item">
             <img src="img/th (1).jfif" alt="Project 2">
-            <h3>Project Beta</h3>
-            <p>Backup project</p>
+            <h3>Akali</h3>
+            <p>Abandoning the Kinkou Order and her title of the Fist of Shadow, Akali now strikes alone, ready to be the deadly weapon her people need. Though she holds onto all she learned from her master Shen, she has pledged to defend Ionia from its enemies, one kill at a time. Akali may strike in silence, but her message will be heard loud and clear: fear the assassin with no master.</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
